--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body{
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
-  background-color: #ffffff;
+  background-color: #dcdcdc;
 }
 
 /* LOGOTIPO PARA TODOS DO NAVBAR */
@@ -18,13 +18,23 @@ body{
 } */
 
 /* ESPAÇO ENTRE LINHAS SUPERIOR */
+.margem-superior-94 {
+  margin-top: 94px;
+}
 .margem-superior-60 {
   margin-top: 60px;
+}
+.margem-superior-30 {
+  margin-top: 30px;
 }
 
 /* ESPAÇO ENTRE LINHAS INFERIOR */
 .margem-inferior-60 {
-  margin-bottom: 100px;
+  margin-bottom: 60px;
+}
+/* ESPAÇO ENTRE LINHAS INFERIOR */
+.margem-inferior-30 {
+  margin-bottom: 30px;
 }
 
 /* TAMANHO DA FONTE PARA TERMOS DE CONTRATO EM FORMULÁRIOS */
