--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,16 @@
 body{
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
-  background-color: #dcdcdc;
+  background-color: #dcdcdc; /* FUNDO CINZA */
 }
 
 /* LOGOTIPO PARA TODOS DO NAVBAR */
 .navbar-brand img {
-	height: 4rem !important;
+  /* height: 4rem !important; */
+  height: 90px !important;
 }
-
-/* TAMANHO DA FONTE NO NAVBAR
-.navbartexto {
-	font-weight: 600;
-	font-size: 18px;
-} */
 
 /* ESPAÇO ENTRE LINHAS SUPERIOR */
-.margem-superior-94 {
-  margin-top: 94px;
-}
 .margem-superior-60 {
   margin-top: 60px;
 }
@@ -43,8 +35,6 @@ body{
 }
 
 
-
-
 /* PRIMEIRO NAVBAR BLUE PADRÃO DA PLATAFORMA MYNAVBLUE */
 .nav-link {
     color: #ffffff;
@@ -57,6 +47,7 @@ body{
 }
 .mynavblue a {
     margin-right: 30px;
+    /*margin-left: 50px;*/
     border-bottom: 3px solid transparent;
 }
 .mynavblue a:hover {
@@ -74,6 +65,7 @@ body{
 }
 .mynavblack a {
     margin-right: 30px;
+    margin-left: 20px;
     border-bottom: 2px solid transparent;
 }
 .mynavblack a:hover {
@@ -85,24 +77,6 @@ body{
 .active a {
     border-bottom: 3px solid #ffffff;
 }
-
-/* EFEITO BOTÃO */
-.mrt a {
-    background: #181174;
-    color: #fff !important;
-    margin-top: 8px;
-    border-radius: 50px;
-    padding: 10px 15px !important;
-    box-shadow: 3px 3px 5px #777;
-    width: 260px;
-    text-align: center;
-}
-.mrt a:hover {
-    background: #3B3779;
-    border-bottom: 3px solid #3B3779;
-    box-shadow: none;
-}
-
 
 /* OPÇÕES DE FORMULÁRIO PADRÃO --- INICIO */
 .login-container{
@@ -155,8 +129,3 @@ body{
   box-shadow: 0 0 0 0.2rem rgba(34,113,179,.25);
 }
 /* OPÇÕES DE FORMULÁRIO PADRÃO --- FINAL */
-
-
-
-
-
