--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,20 @@ body{
   box-shadow: 0 0 0 0.2rem rgba(34,113,179,.25);
 }
 /* OPÇÕES DE FORMULÁRIO PADRÃO --- FINAL */
+
+/* EFEITO BOTÃO */
+.efeitobtn a {
+  background: #181174;
+  color: #fff !important;
+  margin-top: 0px;
+  border-radius: 50px;
+  padding: 6px 0px !important;
+  /*box-shadow: 3px 3px 5px #777;*/
+  width: 260px;
+  text-align: center;
+}
+.efeitobtn a:hover {
+  background: #2271b3;
+  border-bottom: 3px solid #2271b3;
+  box-shadow: none;
+}
