--- a/css/pulse.css
+++ b/css/pulse.css
@@ -27,3 +27,10 @@
 		box-shadow: 0 0 0 0 rgba(18, 10, 143, 0);
 	}
 }
+
+.pulse a:hover, .pulse a:focus{
+	color: #2271b3;
+}
+.pulse a{
+	color: #fff;
+}
