--- a/css/style.css
+++ b/css/style.css
@@ -75,11 +75,11 @@ body{
     border-bottom: 3px solid #ffffff;
 }
 
+
 /* SEGUNDO NAVBAR BLUE PADRÃO DA PLATAFORMA MYNAVBLACK*/
 .mynavblack {
     background-color: #000000;
     font-size: 14px;
-
 }
 .mynavblack a {
     margin-right: 30px;
@@ -95,6 +95,7 @@ body{
 .active a {
     border-bottom: 3px solid #ffffff;
 }
+
 
 /* OPÇÕES DE FORMULÁRIO PADRÃO --- INICIO */
 .login-container{
@@ -164,3 +165,32 @@ body{
   border-bottom: 3px solid #2271b3;
   box-shadow: none;
 }
+
+/* ESTILOS DOS CARDS EM SAIBA MAIS --- INÍCIO */
+.card-header-second{
+	box-shadow:1px 7px 15px #a2a2a2;
+  margin:-25px -25px 0px -25px;
+  height: 120px;
+  background: linear-gradient(-90deg, #4400ff, #000000);
+}
+.card-section-third span i{
+	padding:17px;
+	margin:0px 10px;
+	color:#fff;
+	height:50px;
+	width:50px;
+	box-shadow:1px 6px 24px #d2d2d2;
+	background: linear-gradient(-90deg, #11998e, #38ef7d); 
+}
+.card-header-third span i:hover,.card-section-third span i:hover{
+	box-shadow:1px 1px 15px #000;
+}
+/*efecto shadows para todas las tarjetas*/
+.card-section{
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+}
+/*Para el efecto sombra al pasar por encima el mouse*/
+.card-section:hover{
+	box-shadow:1px 1px 20px #d2d2d2;
+}
+/* ESTILO DOS CARDS EM SAIBA MAIS --- FINAL */
