--- a/css/pulse.css
+++ b/css/pulse.css
@@ -1,8 +1,8 @@
 .pulse {
 	/*background-color: rgba(255, 82, 82, 1);*/
-	height: 60px;
-	width: 60px;
-	background: #120a8f;
+	height: 68px;
+	width: 68px;
+	background: #fff;
 	border-radius: 50%;
 	color: #ffffff;
 	font-size: 30px;
@@ -14,7 +14,7 @@
 @keyframes animate {
 	0% {
 		transform: scale(0.9);
-		box-shadow: 0 0 0 0 rgba(18, 10, 143, 0.7);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
 	}
 	
 	70% {
