--- a/parceiro/templates/menu.html
+++ b/parceiro/templates/menu.html
@@ -22,12 +22,12 @@
         </div>
         <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 align-self-center">
           <div class="header-ctn">
-            <div><a href="#"><h4><i class="text-white fas fa-list-alt"></i></h4><div class="qty">0</div></a></div>
+            <div><a href="minhalista.php"><h4><i class="text-white fas fa-list-alt"></i></h4><div class="qty">0</div></a></div>
           </div>
         </div>
         <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1 align-self-center">
           <div class="header-ctn">
-            <div><a href="#"><h4><i class="text-white fa fa-shopping-cart"></i></h4><div class="qty">0</div></a></div>
+            <div><a href="meucarrinho.php"><h4><i class="text-white fa fa-shopping-cart"></i></h4><div class="qty">0</div></a></div>
           </div>
         </div>
       </div>
